Change Makefile targets, make grafana anonymous login

--- a/helm/values/benchmark-avalanche-only.yaml
+++ b/helm/values/benchmark-avalanche-only.yaml
@@ -145,6 +145,8 @@ tobs:
         requests:
           cpu: 50m
           memory: 250Mi
+      env:
+        GF_AUTH_ANONYMOUS_ENABLED: true
       envValueFrom:
         GRAFANA_PASSWORD:
       sidecar:
