Add in trace load generator through otel-demo helm chart

--- a/scenarios/traces/ingest-direct/Makefile
+++ b/scenarios/traces/ingest-direct/Makefile
@@ -1,18 +1,18 @@
-NS="metrics-ingest-direct"
+NS="traces-ingest-direct"
 
 .PHONY: all
 all: install
 
 .PHONY: helm-repo
 helm-repo:
-	-helm repo add timescale 'https://charts.timescale.com'
-	helm repo update timescale
+	-helm repo add open-telemetry 'https://open-telemetry.github.io/opentelemetry-helm-charts'
+	helm repo update open-telemetry
 
 .PHONY: install upgrade deploy
 deploy: install
 upgrade: install
 install: helm-repo
-	helm upgrade --install ingest-direct timescale/avalanche \
+	helm upgrade --install ingest-direct open-telemetry/opentelemetry-demo \
 		--wait \
 		--timeout 15m \
 		--namespace "$(NS)" \
@@ -22,4 +22,4 @@ install: helm-repo
 .PHONY: uninstall delete
 uninstall: delete
 delete:
-	helm delete ingest-direct --namespace "$(NS)"
+	helm del ingest-direct --namespace "$(NS)"
