scenarios/metrics/ingest-with-prometheus: unify helm values setting

--- a/scenarios/metrics/ingest-with-prometheus/values.yaml
+++ b/scenarios/metrics/ingest-with-prometheus/values.yaml
@@ -39,3 +39,7 @@ avalanche:
     - --series-count=120
     - --label-count=10
     - --value-interval=10
+  serviceMonitor:
+    enabled: true
+  serviceAccount:
+    create: true
