scenarios/metrics: prevent ingesting generated data into tobs-provisioned prometheus

--- a/scenarios/metrics/ingest-direct/values.yaml
+++ b/scenarios/metrics/ingest-direct/values.yaml
@@ -3,6 +3,8 @@ image:
   tag: main
   pullPolicy: Always
 replicaCount: 1
+labels:
+  tobs/excluded: "true"
 extraArgs:
   - --const-label=avalanche_replica=$(POD_NAME)
   - --metric-count=100
