scenarios/metrics/ingest-with-prometheus: ingest prometheus metrics into main prometheus

--- a/scenarios/metrics/ingest-with-prometheus/chart/templates/prometheus.yaml
+++ b/scenarios/metrics/ingest-with-prometheus/chart/templates/prometheus.yaml
@@ -5,6 +5,7 @@ metadata:
   name: {{ .Release.Name }}-prometheus
   namespace: {{ .Release.Namespace }}
   labels:
+    app.kubernetes.io/name: prometheus
     app.kubernetes.io/part-of: ingest-with-prometheus
 spec:
   version: {{ .Values.prometheus.version }}
@@ -17,7 +18,11 @@ spec:
   retention: 1d
   serviceMonitorSelector:
     matchLabels:
-      app.kubernetes.io/name: {{ .Release.Name }}-avalanche
+      app.kubernetes.io/part-of: ingest-with-prometheus
+      tobs/excluded: "true"
+  podMetadata:
+    labels:
+      app.kubernetes.io/part-of: ingest-with-prometheus
   affinity:
     podAntiAffinity:
       preferredDuringSchedulingIgnoredDuringExecution:
