Enable remote write dashboards
Signed-off-by: Arunprasad Rajkumar <ar.arunprasad@gmail.com>

--- a/stack/values.yaml
+++ b/stack/values.yaml
@@ -81,6 +81,7 @@ kube-prometheus-stack:
   # This prometheus is monitoring the cluster. Do not use it for load generation.
   prometheus:
     prometheusSpec:
+      remoteWriteDashboards: true
       remoteRead: []
       remoteWrite: []
       replicas: 1
