stack: disable admission webhooks for prometheus-operator as they are not needed in this environment

--- a/stack/values.yaml
+++ b/stack/values.yaml
@@ -70,6 +70,9 @@ kube-prometheus-stack:
     enabled: false
   alertmanager:
     enabled: false
+  prometheusOperator:
+    admissionWebhooks:
+      enabled: false
   # This prometheus is monitoring the cluster. Do not use it for load generation.
   prometheus:
     prometheusSpec:
