--- a/stack/values.yaml
+++ b/stack/values.yaml
@@ -12,6 +12,12 @@ timescaledb-single:
     requests:
       cpu: 100m
       memory: 2Gi
+  patroni:
+    bootstrap:
+      dcs:
+        postgresql:
+          parameters:
+            shared_preload_libraries: pg_stat_statements,pg_stat_monitor,pg_stat_kcache
   affinityTemplate: |
     podAntiAffinity:
       preferredDuringSchedulingIgnoredDuringExecution:
