Disable Prom Operator TLS as it is no longer required with webhooks disabled

--- a/stack/values.yaml
+++ b/stack/values.yaml
@@ -79,6 +79,8 @@ kube-prometheus-stack:
   alertmanager:
     enabled: false
   prometheusOperator:
+    tls:
+      enabled: false
     admissionWebhooks:
       enabled: false
   # This prometheus is monitoring the cluster. Do not use it for load generation.
