Adding values.overrides.yaml for ingest-with-prometheus
Signed-off-by: Arunprasad Rajkumar <ar.arunprasad@gmail.com>

--- a/scenarios/metrics/ingest-with-prometheus/Makefile
+++ b/scenarios/metrics/ingest-with-prometheus/Makefile
@@ -21,7 +21,8 @@ install: helm-repo helm-deps
 		--timeout 15m \
 		--namespace "$(NS)" \
 		--create-namespace \
-		-f values.yaml
+		-f values.yaml \
+		-f values-overrides.yaml
 
 .PHONY: uninstall
 uninstall:
