--- a/scenarios/metrics/ingest-with-prometheus/values.yaml
+++ b/scenarios/metrics/ingest-with-prometheus/values.yaml
@@ -13,6 +13,7 @@ prometheus:
       batchSendDeadline: 30s
       minBackoff: 100ms
       maxBackoff: 10s
+  retention: 1d
   resources:
     requests:
       cpu: 40m
