Overrides to achieve 500K/s ingestion
Signed-off-by: Arunprasad Rajkumar <ar.arunprasad@gmail.com>

--- a/scenarios/metrics/ingest-with-prometheus/chart/templates/prometheus.yaml
+++ b/scenarios/metrics/ingest-with-prometheus/chart/templates/prometheus.yaml
@@ -16,6 +16,7 @@ spec:
   resources:
   {{ .Values.prometheus.resources | toYaml | nindent 4 }}
   retention: {{ .Values.prometheus.retention }}
+  walCompression: true
   serviceMonitorSelector:
     matchLabels:
       app.kubernetes.io/part-of: ingest-with-prometheus
